--- a/js/templates/payroll/temp_payroll_records.html
+++ b/js/templates/payroll/temp_payroll_records.html
@@ -20,6 +20,7 @@
                           <thead style="cursor: pointer">
                              <tr>
                                 <th width="1"><input type="checkbox" id="check-all-payroll-records"></th>
+                                <th>Payroll Created</th>
                                 <th width="60" colspan="3"></th>
                                 <th style="text-align: center">Location</th>
                                 <th style="text-align: center">From</th>
