--- a/js/templates/payroll/temp_list_of_payroll.html
+++ b/js/templates/payroll/temp_list_of_payroll.html
@@ -21,17 +21,14 @@
           <%= accounting.formatMoney(total, " ", 2) %>
        </td>
 
-       <td style="text-align: center" width="100" id="<%= model.get('id') %>">
-          <input type="text" id="emp-advances" class="form-control input-sm input-advances-<%= model.get('id') %>" style="width: 100px; height: 27px" />
+       <td style="font-weight: bolder font-size: 16px; text-align: center">
+          <input type="number" id="emp-overtime-hrs" class="form-control input-sm input-overtime-hrs-<%= model.get('id') %>" style="width: 100px; height: 27px; font-size: 17px" />
        </td>
 
-       <td style="text-align: center" width="100" id="<%= model.get('id') %>">
-          <input type="text" id="emp-sss" class="form-control input-sm input-sss-<%= model.get('id') %>" style="width: 100px; height: 27px"/>
+       <td style="font-weight: bolder font-size: 16px; text-align: center">
+          <input type="number" id="emp-overtime-mins" class="form-control input-sm input-overtime-mins-<%= model.get('id') %>" style="width: 100px; height: 27px; font-size: 17px" />
        </td>
-
-       <td style="text-align: center" id="<%= model.get('id') %>" width="100">
-          <input type="text" id="emp-phil" class="form-control input-sm input-phil-<%= model.get('id') %>" style="width: 100px; height: 27px"/>
-       </td>
+      
        
        <td style="font-weight: bolder; font-size: 16px; text-align: right" id="net-amount-<%= model.get('id') %>">
           <%= accounting.formatMoney(total, " ", 2) %>
@@ -44,13 +41,12 @@
 <tr style="font-size: 18px">
      <td colspan="5" style="font-weight: bolder; text-align: center">OVER ALL TOTAL</td>
      <td style="text-align: right; font-weight: bolder" id="payroll-total"><%= accounting.formatMoney(over_all_total," ",2) %></td>
-     <td style="text-align: center; font-weight: bolder" id="payroll-advances">0.00</td>
-     <td style="text-align: center; font-weight: bolder" id="payroll-sss">0.00</td>
-     <td style="text-align: center; font-weight: bolder" id="payroll-phil">0.00</td>
+     <td style="text-align: center; font-weight: bolder" id="payroll-overtime-hrs">0</td>
+     <td style="text-align: center; font-weight: bolder" id="payroll-overtime-mins">0</td>
      <td style="font-weight: bolder">Php <span class="pull-right" id="over-all-total"><%= accounting.formatMoney(over_all_total," ",2) %></span></td>
 </tr>
 
 <tr style="font-size: 18.5px">
-    <td colspan="9"></td>
+    <td colspan="8"></td>
     <td style="text-align: right; font-weight: bolder" class="text-danger" id="over-all-total-rounded"><%= accounting.formatMoney(Math.round(over_all_total)," ",0) %></td>
 </tr>
