--- a/js/templates/payroll/temp_modal_table_payrollemps.html
+++ b/js/templates/payroll/temp_modal_table_payrollemps.html
@@ -1,5 +1,5 @@
                             <div class="modal fade" id="modalTablePayrollemps" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" style="width: 80%" id="div-modalTablePayrollemps">
+                                <div class="modal-dialog" style="width: 90%" id="div-modalTablePayrollemps">
                                     <div class="modal-content">
 
                                         <div class="modal-header text-right" >
@@ -17,12 +17,12 @@
                                         </div>
                                         <div id="body-to-print" class="modal-body" style="font-size: 14px">
                                         <div class="text-center">
-                                        <p class="text-center" style="margin-top: -10px">POPE FRANCIS FOR RESILIENT AND CO-EMPOWERED SUSTAINABLE COMMUNITIES</p>
-                                        <p class="text-center" style="margin-top: -10px">(FRANCESCO) INC.</p>
+                                        <p class="text-center" style="margin-top: -10px; font-weight: bolder; font-size: 14px">POPE FRANCIS FOR RESILIENT AND CO-EMPOWERED SUSTAINABLE COMMUNITIES</p>
+                                        <p class="text-center" style="margin-top: -10px; font-weight: bolder; font-size: 14px">(FRANCESCO) INC.</p>
                                         <span class="text-center" style="margin-top: -20px">Brgy. 99 Diit, Tacloban City</span>
                                         <span class="text-center" style="margin-top: -20px">6500 Philippines</span>
                                         <small><h6 style="font-size: 14px">PAYROLL: 
-                                                 &nbsp;&nbsp;<span id="table-payrollemps-location"></span><br/>
+                                                 &nbsp;&nbsp;<span style="font-weight: bolder; font-size: 18px" class="text-danger" id="table-payrollemps-location"></span><br/>
                                                  FOR THE PERIOD: &nbsp;&nbsp;<span id="table-payrollemps-period">br/</span>
                                            </h6></small>
                                         </div>
@@ -33,15 +33,13 @@
                                                              <th width="1">No</th>
                                                              <th style="text-align: left" width="">Employee Name</th>
                                                              <th style="text-align: center" width="">Designation</th>
-                                                             <th width="60" style="text-align: center" width="">No. of days</th>
-<!--                                                         <th id="this-allowance" class="r-a" style="text-align: center; display: none" width="40">Rice/Allow.</th>
- -->                                                         <th width="60" style="text-align: center" width="">Rate per day</th>
+                                                             <th width="80" style="text-align: center" width="">No. of days</th>
+                                                             <th width="80" style="text-align: center" width="">Rate per day</th>   
+                                                             <th id="this-allowance" style="text-align: left"width="">OT-hrs</th>
+                                                             <th id="this-allowance" style="text-align: left"width="">OT-mins</th>
+                                                             
                                                              <th id="this-allowance" style="text-align: right" width="">Total</th>
-                                                             <!-- <th id="this-allowance" style="text-align: center"width="">Advances</th>
-                                                             <th id="this-allowance" style="text-align: center"width="">SSS</th>
-                                                             <th id="this-allowance" style="text-align: center"width="">Phil</th>
-                                                             <th id="this-allowance" style="text-align: center" width="">Undertime</th> -->
-                                                             <!-- <th style="text-align: right" width="">Net Amount</th> -->
+                                                            
                                                              <th width="1" id="emp-no">No</th>
                                                              <th id="remove" class="signature" width="">Signature</th>
                                                         </tr>
