--- a/js/templates/payroll/temp_table_payroll.html
+++ b/js/templates/payroll/temp_table_payroll.html
@@ -19,14 +19,11 @@
                                                            <th width="60"rowspan="2" style="text-align: center">NO. OF DAYS</th>
                                                            <th width="80" rowspan="2" style="text-align: center">RATE PER DAY</th>
                                                            <th rowspan="2" style="text-align: right">TOTAL</th>
-                                                           <th colspan="3" style="text-align: center">ADVANCES</th>
+                                                           <th width="80" rowspan="2" style="text-align: center">OVERTIME-HRS</th>
+                                                           <th width="90" rowspan="2" style="text-align: center">OVERTIME-MINS</th>
                                                            <th rowspan="2" style="text-align: right">NET AMOUNT</th>
                                                       </tr>    
-                                                      <tr>
-                                                           <th rowspan="1" style="text-align: center">ADVANCES</th>
-                                                           <th rowspan="1" style="text-align: center">SSS</th>
-                                                           <th rowspan="1" style="text-align: center">PHIL HEALTH</th>
-                                                      </tr>
+                                                  
                                                </thead>
                                                <tbody id="list-of-payroll" style="font-weight: bolder">
                                                </tbody>
