--- a/js/templates/payroll/temp_table_payroll.html
+++ b/js/templates/payroll/temp_table_payroll.html
@@ -21,6 +21,7 @@
                                                            <th rowspan="2" style="text-align: right">TOTAL</th>
                                                            <th width="80" rowspan="2" style="text-align: center">OVERTIME-HRS</th>
                                                            <th width="90" rowspan="2" style="text-align: center">OVERTIME-MINS</th>
+                                                            <th width="90" rowspan="2" style="text-align: center">UNDERTIME</th>
                                                            <th rowspan="2" style="text-align: right">NET AMOUNT</th>
                                                       </tr>    
                                                   
