Adding changes on total payrollemps

--- a/js/templates/payroll/temp_modal_table_payrollemps.html
+++ b/js/templates/payroll/temp_modal_table_payrollemps.html
@@ -37,6 +37,7 @@
                                                              <th width="80" style="text-align: center" width="">Rate per day</th>   
                                                              <th id="this-allowance" style="text-align: left"width="">OT-hrs</th>
                                                              <th id="this-allowance" style="text-align: left"width="">OT-mins</th>
+                                                             <th style="text-align: center">Undertime</th>
                                                              
                                                              <th id="this-allowance" style="text-align: right" width="">Total</th>
                                                             
