--- a/js/templates/payroll/temp_list_of_payrollemps.html
+++ b/js/templates/payroll/temp_list_of_payrollemps.html
@@ -17,6 +17,7 @@
 <% var salary = Number(model.num_of_days) * Number(model.rpd) %>
 <% salary += Number(self.getOtHrs(model)) %>
 <% salary += Number(self.getOtMins(model)) %>
+<% salary = Number(salary) - Number(self.getUndertimeTotal(model)) %>
 
         <td style="text-align: center"><%= ++numbering %></td>
         <td style="text-align: left"><%= employees.function.getFullname(model.emp) %></td>
@@ -37,7 +38,6 @@
         </td>
         <td style="text-align: left">
           <% if(Number(model.ot_hrs) > 0) { %>
-           
            <b><%= model.ot_mins %></b>
            &nbsp;&nbsp;
            equiv. to
@@ -46,6 +46,16 @@
           <% } else { %> 
             0
          <% } %> 
+        </td>
+        <td class="text-center">
+           <% if(Number(model.undertime) > 0) { %>
+           <%= model.undertime %> hr/s&nbsp;&nbsp;=&nbsp;&nbsp;
+            P <%= self.getUndertimeTotal(model) %>
+           <% } else { %> 
+            0
+           <% } %> 
+           
+          
         </td>
         <td class="text-primary" id="allowance" style="text-align: right;font-weight: bolder"><%= accounting.formatMoney(salary, " ", 2) %></td>
         
@@ -67,7 +77,7 @@
 <% numbering = 0 %>
 
 <tr class="text-danger" style="text-align:right; font-weight: bolder; font-size: 16px">
-     <td colspan="7"  style="text-align: center" id="th-colspan">PAYROLL TOTAL</td>
+     <td colspan="8"  style="text-align: center" id="th-colspan">PAYROLL TOTAL</td>
      <td id="allowance"><span class="pull-left"></span><%= accounting.formatMoney(total, "P ", 2) %></td>
      <!-- <td id="allowance" class="text-center"><%= accounting.formatMoney(t_advances, " ", 2) %></td>
      <td id="allowance" class="text-center"><%= accounting.formatMoney(t_sss, " ", 2) %></td>
