Adding total to payroll table (payrolls table)

--- a/js/templates/payroll/temp_payroll_records.html
+++ b/js/templates/payroll/temp_payroll_records.html
@@ -23,14 +23,14 @@
                                 <th>Payroll Created</th>
                                 <th width="60" colspan="3"></th>
                                 <th style="text-align: center">Location</th>
-                                <th style="text-align: center">From</th>
-                                <th style="text-align: center">To</th>
+                                <th style="text-align: center">PAYROLL SCOPE (WEEK)</th>
                                 <th style="text-align: center" id="total-payroll">Total</th>
-                                <th style="text-align: center">Advances Total</th>
-                                <th style="text-align: center">SSS Total</th>
-                                <th style="text-align: center">PhilHealth Total</th>
-                                <!-- <th style="text-align: center">Rice Allowance Total</th> -->
                                 <th style="text-align: right">Net Amount</th>
+
+                                <th style="text-align: center">OVERTIME HRS</th>
+                                <th style="text-align: center">OVERTIME MINS</th>
+                                <th style="text-align: center">UNDERTIME</th>
+                                
                                 <th style="text-align: center">Date</th>
                                 <th style="text-align: center">Time</th>
                                 <th style="text-align: center">Personnel</th> 
