--- a/js/templates/payroll/temp_record_list_payroll.html
+++ b/js/templates/payroll/temp_record_list_payroll.html
@@ -1,4 +1,6 @@
-<% library.forEach(function(model) { %>
+<% let each_total = 0 %>
+<% library.forEach(function(model) { %> 
+<% total_object = self.getTotalOfpayroll(model) %>
 <tr>
      <td><input type="checkbox" value="<%= model.id %>"></td>
      <td><%= moment(model.true_date).format('MMMM DD, YYYY hh:mm') %></td>
@@ -7,13 +9,14 @@
      <td class="text-center"><a href="#Attendance/view/<%= model.id %>">attendance</a></td>
 
      <td style="text-align: center"><%= model.location %></td>
-     <td style="text-align: center"><%= model.date_from %></td>
-     <td style="text-align: center"><%= model.date_to %></td>
+     <td style="text-align: center"><%= model.date_from %>&nbsp;&nbsp;-&nbsp;&nbsp;<%= model.date_to %></td>
      <td style="text-align: center"><%= accounting.formatMoney(payrollemps.function.getTotalOfPayroll(model.id)," ",2) %></td>
-     <td style="text-align: center"><%= accounting.formatMoney(model.advances_total," ",2) %></td>
-     <td style="text-align: center"><%= accounting.formatMoney(model.sss_total," ",2) %></td>
-     <td style="text-align: center"><%= accounting.formatMoney(model.phil_total," ",2) %></td>
-     <td style="text-align: right"><%= accounting.formatMoney(model.net," ",2) %></td>
+     <td style="text-align: right; font-weight: bolder"><%= accounting.formatNumber(total_object.net, 2) %></td>
+
+     <td style="text-align: center"><%= accounting.formatMoney(total_object.ot_hrs," ",2) %></td>
+     <td style="text-align: center"><%= accounting.formatMoney(total_object.ot_mins," ",2) %></td>
+     <td style="text-align: center"><%= accounting.formatMoney(total_object.undertime," ",2) %></td>
+     
      <td style="text-align: center"><%= model.date %></td>
      <td style="text-align: center"><%= model.time %></td>
      <td style="text-align: center"><%= accounts.function.getFullname(model.personnel) %></td>
